; modified from example https://xebia.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml/
; Minimum pyproject.toml and setup.cfg to make it pip installable
; Need to be revised by original author EugenHotaj
[metadata]
name = pytorch_generative
version = 0.1.0
author = EugenHotaj
; author_email = eugens@nyu.edu
url = https://github.com/EugenHotaj/pytorch-generative
description = Easy generative modeling in PyTorch
; long_description = file: README.md
; long_description_content_type = text/markdown
; keywords = example, setuptools
; license = BSD 3-Clause License
; classifiers =
;     License :: OSI Approved :: BSD License
;     Programming Language :: Python :: 3

[options]
packages = find:
; zip_safe = True
; include_package_data = True
install_requires =
    Pillow >= 7.2.0
    numpy >= 1.18.4
    tensorboard >= 2.3.0
    torch >= 1.5.1
    torchvision >= 0.6.1
    scikit-learn >= 1.2.1

; [options.package_data]
; example = data/schema.json, *.txt
; * = README.md